log
Thu Mar 26 06:57:38 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
5b57b1d
Thu Mar 26 07:12:46 PM UTC 2026: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:5: error: unknown type name ‘list’; did you mean ‘List’?
   35 |     list* lista = (list*)malloc(sizeof(list*));
      |     ^~~~
      |     List
list.c:35:20: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   35 |     list* lista = (list*)malloc(sizeof(list*));
      |                    ^~~~
      |                    List
list.c:35:20: note: each undeclared identifier is reported only once for each function it appears in
list.c:35:25: error: expected expression before ‘)’ token
   35 |     list* lista = (list*)malloc(sizeof(list*));
      |                         ^
list.c:36:10: error: request for member ‘head’ in something not a structure or union
   36 |     lista->head = NULL;
      |          ^~
list.c:37:10: error: request for member ‘tail’ in something not a structure or union
   37 |     lista->tail = NULL;
      |          ^~
list.c:38:10: error: request for member ‘current’ in something not a structure or union
   38 |     lista->current = NULL;
      |          ^~
4126847
Thu Mar 26 07:13:10 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:20: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   35 |     List* lista = (list*)malloc(sizeof(list*));
      |                    ^~~~
      |                    List
list.c:35:20: note: each undeclared identifier is reported only once for each function it appears in
list.c:35:25: error: expected expression before ‘)’ token
   35 |     List* lista = (list*)malloc(sizeof(list*));
      |                         ^
4706fe8
Thu Mar 26 07:13:34 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:40: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   35 |     List* lista = (List*)malloc(sizeof(list*));
      |                                        ^~~~
      |                                        List
list.c:35:40: note: each undeclared identifier is reported only once for each function it appears in
list.c:35:45: error: expected expression before ‘)’ token
   35 |     List* lista = (List*)malloc(sizeof(list*));
      |                                             ^
a1ec7a6
Thu Mar 26 07:13:56 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
fd7b5d8
Thu Mar 26 07:15:00 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:10: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   36 |     lista->head = NULL;
      |          ^~
list.c:35:26: note: object of size 8 allocated by ‘malloc’
   35 |     List* lista = (List*)malloc(sizeof(List*));
      |                          ^~~~~~~~~~~~~~~~~~~~~
list.c:37:10: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   37 |     lista->tail = NULL;
      |          ^~
list.c:35:26: note: object of size 8 allocated by ‘malloc’
   35 |     List* lista = (List*)malloc(sizeof(List*));
      |                          ^~~~~~~~~~~~~~~~~~~~~
list.c:38:10: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   38 |     lista->current = NULL;
      |          ^~
list.c:35:26: note: object of size 8 allocated by ‘malloc’
   35 |     List* lista = (List*)malloc(sizeof(List*));
      |                          ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
a64d583
Thu Mar 26 07:15:59 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:10: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   36 |     lista->head = NULL;
      |          ^~
list.c:35:27: note: object of size 8 allocated by ‘malloc’
   35 |     List* lista = (List *)malloc(sizeof(List*));
      |                           ^~~~~~~~~~~~~~~~~~~~~
list.c:37:10: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   37 |     lista->tail = NULL;
      |          ^~
list.c:35:27: note: object of size 8 allocated by ‘malloc’
   35 |     List* lista = (List *)malloc(sizeof(List*));
      |                           ^~~~~~~~~~~~~~~~~~~~~
list.c:38:10: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   38 |     lista->current = NULL;
      |          ^~
list.c:35:27: note: object of size 8 allocated by ‘malloc’
   35 |     List* lista = (List *)malloc(sizeof(List*));
      |                           ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
6c9faa4
Thu Mar 26 07:16:44 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:10: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   36 |     lista->head = NULL;
      |          ^~
list.c:35:28: note: object of size 8 allocated by ‘malloc’
   35 |     List* lista = (List *) malloc(sizeof(List*));
      |                            ^~~~~~~~~~~~~~~~~~~~~
list.c:37:10: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   37 |     lista->tail = NULL;
      |          ^~
list.c:35:28: note: object of size 8 allocated by ‘malloc’
   35 |     List* lista = (List *) malloc(sizeof(List*));
      |                            ^~~~~~~~~~~~~~~~~~~~~
list.c:38:10: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   38 |     lista->current = NULL;
      |          ^~
list.c:35:28: note: object of size 8 allocated by ‘malloc’
   35 |     List* lista = (List *) malloc(sizeof(List*));
      |                            ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
f25e334
Thu Mar 26 07:19:02 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
6451282
Thu Mar 26 07:24:31 PM UTC 2026: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:48:11: error: ‘List’ {aka ‘struct List’} has no member named ‘curent’; did you mean ‘current’?
   48 |     list->curent = list->head;
      |           ^~~~~~
      |           current
25f1dcc
Thu Mar 26 07:25:04 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/60
82bf4eb
Thu Mar 26 07:27:07 PM UTC 2026: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
4e3263e
Thu Mar 26 07:33:41 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:54:25: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   54 |     list->current = list->next;
      |                         ^~
ef674a0
Thu Mar 26 07:35:10 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
47cf845
Thu Mar 26 07:42:39 PM UTC 2026: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:65:34: error: ‘Node’ has no member named ‘tail’
   65 |     list->current = list->current->tail;
      |                                  ^~
list.c: In function ‘prevList’:
list.c:70:31: error: expected expression before ‘||’ token
   70 |     if(list->current == NULL) || (list->current->prev == NULL) return NULL;
      |                               ^~
60cee05
Thu Mar 26 07:44:27 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:65:34: error: ‘Node’ has no member named ‘tail’
   65 |     list->current = list->current->tail;
      |                                  ^~
list.c: In function ‘prevList’:
list.c:70:31: error: expected expression before ‘||’ token
   70 |     if(list->current == NULL) || (list->current->prev == NULL) return NULL;
      |                               ^~
6bd4d21
